complete footer filter

--- a/my-app/src/app/component/footer/footer.component.scss
+++ b/my-app/src/app/component/footer/footer.component.scss
@@ -33,7 +33,7 @@
     
    
 &.clear-completed-btn{
-    visibility: visible;
+    visibility: hidden;
     &.visible{
         visibility: visible;
     }
