--- a/my-app/src/app/component/footer/footer.component.html
+++ b/my-app/src/app/component/footer/footer.component.html
@@ -8,10 +8,10 @@
     <span class="items-count">{{length}} item {{length > 1? 's':""}}</span>
     
     <div>
-    <button type="button" class="filter-btn" *ngFor="let btn of filterButtons" [ngClass]="{active : btn.isActive}">{{btn.label}}
+    <button type="button" class="filter-btn" *ngFor="let btn of filterButtons" [ngClass]="{active : btn.isActive}" (click)="filter(btn.type)">{{btn.label}}
 
     </button>
 </div>
-<button class="filter-btn clear-complated-btn">Clear Complated</button>
+<button class="filter-btn clear-complated-btn" [ngClass]="{'visible': hasCompleted$ | async}" (click)="clearCompleted()">Clear Complated</button>
 </div>
 </div>
