--- a/my-app/src/app/component/todo-item/todo-item.component.html
+++ b/my-app/src/app/component/todo-item/todo-item.component.html
@@ -13,14 +13,14 @@
      [checked]="todo.isCompleted" 
      (change)="changeTodoStatus()"
      />
-     <label [for]="todo.id">{{todo.content}}</label></div>
+     <label [@fadeStrikeThrough]="todo.isCompleted ? 'completed':'active'" [for]="todo.id">{{todo.content}}</label></div>
     <div class="d-flex align-items-center">
-        <span class="icon-wrapper text-center edit" [ngClass]="{active : isHovered}">
+        <span class="icon-wrapper text-center edit" [hidden]="todo.isCompleted" [ngClass]="{active : isHovered}">
             <i class="eva eva-edit-outline" (click)="isEditing = true"></i>
         </span>
-        <span class="icon-wrapper text-center" [ngClass]="{active:isHovered}"><i class="eva eva-close"></i></span>
+        <span class="icon-wrapper text-center" [ngClass]="{active:isHovered}"><i class="eva eva-close" (click)="removeTodo()"></i></span>
     </div>
-    <form class="edit-form" *ngIf="isEditing">
-        <input type="text" name="editTodo" />
+    <form class="edit-form" *ngIf="isEditing" (keyup)="submitEdit($event)">
+        <input type="text" name="editTodo" [(ngModel)]="todo.content" />
     </form>
 </div>
