--- a/my-app/src/app/component/todo-list/todo-list.component.html
+++ b/my-app/src/app/component/todo-list/todo-list.component.html
@@ -1,5 +1,5 @@
 
 
 
-<app-todo-item *ngFor="let todo of todo$ | async" [todo]="todo" (changeStatus)="onChangeTodoStatus($event)"></app-todo-item>
+<app-todo-item *ngFor="let todo of todo$ | async" [todo]="todo" (changeStatus)="onChangeTodoStatus($event)" (editTodo)="onEditTodo($event)" (deleteTodo)="onDeleteTodo($event)"></app-todo-item>
 
